# smart_chunker

./: README.md  pyproject.toml  requirements.txt  setup.py
chunker/: chunker.py
demo/: text_to_chunks.py
smart_chunker/: chunker.py  sentenizer.py
tests/: test_chunker.py  test_sentenizer.py
