[tool.poetry]
name = "smart-chunker"
version = "0.1.1"
description = "Smart-Chunker is a semantic chunker to prepare a long document for RAG"
authors = ["Ivan Bondarenko <bond005@yandex.ru>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bond005/smart_chunker"
keywords = ["smart-chunker", "rag", "chunker", "cross-encoder", "encoder", "reranker"]
packages = [{ include = "smart_chunker" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "*"
razdel = "==0.5.0"
sentencepiece = "*"
torch = ">=2.0.1"
transformers = ">=4.38.1"
accelerate = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
